--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,9 @@ dependencies:
   flutter:
     sdk: flutter
   ai_barcode_platform_interface: ^3.0.1
-  ai_barcode_web: ^3.0.1
+  ai_barcode_web:
+    git:
+      url: https://github.com/jlouage/flutter-carousel-pro.git
 
 dev_dependencies:
   flutter_test:
